Make WebSocket connetction be possible without the JWT
