# swagger.json
@@ -213,7 +213,7 @@
         }
       }
     },
-    "/user/id/{userNickname}": {
+    "/user/nickname/{userNickname}": {
       "get": {
         "summary": "Получение списка пользователей по никнейму",
         "description": "По данному запросу можно получить список пользователей, чей никнейм соответствует переданной строке",
@@ -716,6 +716,231 @@
                   "UNKNOWN_ERROR": {
                     "$ref": "#/components/examples/S3_STORAGE_ERROR_EXAMPLE"
                   }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/user/user-type": {
+      "put": {
+        "summary": "Обновление типа пользователя",
+        "description": "По данному запросу можно установить новый тип пользователя (userType)",
+        "tags": [
+          "User"
+        ],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/setUserTypeRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Тип пользователя успешно обновлен"
+          },
+          "400": {
+            "description": "Ошибка при получении данных от клиента",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/MISSING_REQUEST_FIELD"
+                    },
+                    {
+                      "$ref": "#/components/schemas/EMPTY_FIELD"
+                    },
+                    {
+                      "$ref": "#/components/schemas/INVALID_INPUT_FORMAT"
+                    }
+                  ]
+                },
+                "examples": {
+                  "MISSING_REQUEST_FIELD": {
+                    "$ref": "#/components/examples/MISSING_REQUEST_FIELD_EXAMPLE"
+                  },
+                  "EMPTY_FIELD": {
+                    "$ref": "#/components/examples/EMPTY_FIELD_EXAMPLE"
+                  },
+                  "INVALID_INPUT_FORMAT": {
+                    "$ref": "#/components/examples/INVALID_INPUT_FORMAT_EXAMPLE"
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DATABASE_ERROR"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/user/ban-user/{userId}": {
+      "get": {
+        "summary": "Бан пользователя админом",
+        "description": "По данному запросу пользователь с правами админа может забанить другого пользователя",
+        "tags": [
+          "User"
+        ],
+        "parameters": [
+          {
+            "name": "userId",
+            "description": "Id другого пользователя",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Пользователь успешно забанен"
+          },
+          "400": {
+            "description": "Параметр не был передан",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/INVALID_PARAMETER_FORMAT"
+                    },
+                    {
+                      "$ref": "#/components/schemas/EMPTY_PARAMETER"
+                    }
+                  ]
+                },
+                "examples": {
+                  "INVALID_PARAMETER_FORMAT": {
+                    "$ref": "#/components/examples/INVALID_PARAMETER_FORMAT_EXAMPLE"
+                  },
+                  "EMPTY_PARAMETER": {
+                    "$ref": "#/components/examples/EMPTY_PARAMETER_EXAMPLE"
+                  }
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Доступ запрещен",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/FORBIDDEN_ACCESS"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Необходимые данные не найдены в базе данных",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DATA_NOT_FOUND"
+                }
+              }
+            }
+          },
+          "500": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DATABASE_ERROR"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/user/unban-user/{userId}": {
+      "get": {
+        "summary": "Разбан пользователя админом",
+        "description": "По данному запросу пользователь с правами админа может разбанить другого пользователя",
+        "tags": [
+          "User"
+        ],
+        "parameters": [
+          {
+            "name": "userId",
+            "description": "Id другого пользователя",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Пользователь успешно разбанен"
+          },
+          "400": {
+            "description": "Параметр не был передан",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/INVALID_PARAMETER_FORMAT"
+                    },
+                    {
+                      "$ref": "#/components/schemas/EMPTY_PARAMETER"
+                    }
+                  ]
+                },
+                "examples": {
+                  "INVALID_PARAMETER_FORMAT": {
+                    "$ref": "#/components/examples/INVALID_PARAMETER_FORMAT_EXAMPLE"
+                  },
+                  "EMPTY_PARAMETER": {
+                    "$ref": "#/components/examples/EMPTY_PARAMETER_EXAMPLE"
+                  }
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Доступ запрещен",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/FORBIDDEN_ACCESS"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Необходимые данные не найдены в базе данных",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DATA_NOT_FOUND"
+                }
+              }
+            }
+          },
+          "500": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DATABASE_ERROR"
                 }
               }
             }
@@ -1653,6 +1878,21 @@
           }
         }
       },
+      "BANNED_ACCOUNT": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "Название ошибки",
+            "example": "BANNED_ACCOUNT"
+          },
+          "message": {
+            "type": "string",
+            "description": "Сообщение ошибки, описание ее сути",
+            "example": "This account has been banned. You no longer can send any requests to the server"
+          }
+        }
+      },
       "DATA_NOT_FOUND": {
         "type": "object",
         "properties": {
@@ -2182,6 +2422,16 @@
       "postAvatarResponse": {
         "$ref": "#/components/schemas/getAvatarLinkResponse"
       },
+      "setUserTypeRequest": {
+        "type": "object",
+        "properties": {
+          "userType": {
+            "type": "string",
+            "description": "Тип пользователя",
+            "example": "SOLDIER | WAITING_FOR_SOLDIER | OTHER"
+          }
+        }
+      },
       "updateSettingsRequest": {
         "type": "object",
         "properties": {
@@ -2413,6 +2663,13 @@
         "value": {
           "name": "FORBIDDEN_ACCESS",
           "message": "You do not have permission to modify this data. Please ensure you have the appropriate access rights or contact support for assistance."
+        }
+      },
+      "BANNED_ACCOUNT_EXAMPLE": {
+        "summary": "Ошибка - аккаунт пользователя был забанен. Он больше не может отправлять запросы на сервер",
+        "value": {
+          "name": "BANNED_ACCOUNT",
+          "message": "This account has been banned. You no longer can send any requests to the server"
         }
       },
       "DATA_NOT_FOUND_EXAMPLE": {
